<resources>
    <string name="app_name">FinObserver</string>
    <string name="UAH">UAH</string>
    <string name="balance">Balance</string>
    <string name="income">Income</string>
    <string name="incomeUAH">Income, UAH</string>
    <string name="exp">Expenses</string>
    <string name="expUAH">Expenses, UAH</string>
    <string name="newTransaction">+ add transaction</string>
    <string name="cat">Category</string>
    <string name="tType">Type</string>
    <string name="Acc">Account</string>
    <string name="tValue">Value</string>
    <string name="ok">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="loadData">Loading data…</string>
    <string name="target">Target account</string>
    <string name="transfer">Transfer</string>
    <string name="acc_name">Account name</string>
    <string name="acc_balance">Accounts</string>
    <string name="acc_icon">Icon</string>
    <string name="date">Date</string>
</resources>